src/tests/fixtures/preprocessor/errors/error10.cpp
struct foo
{
  counted_string boo = CS("foo", sizeof("foo")-1);
};

